optional-section-done

--- a/index.html
+++ b/index.html
@@ -116,6 +116,22 @@
         </div>
       </div>
     </section>
+    <section class="optional-section">
+      <div class="opt-parent">
+        <p>
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
+          quas, ducimus labore sequi quos deserunt optio id repellendus tempora
+          veniam amet porro corporis exercitationem numquam debitis culpa
+          laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus
+          fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab
+          aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum
+          eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam
+          architecto soluta necessitatibus vero?"
+        </p>
+        <h2>Shakib Al Hasan</h2>
+        <p>Student of web-development batch 11</p>
+      </div>
+    </section>
     <footer></footer>
   </body>
 </html>
