--- a/index.html
+++ b/index.html
@@ -199,6 +199,64 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+
+    <section class="donet-section">
+      <h1>Donate Today</h1>
+      <p>
+        Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+        cutting-edge technology, promoting inclusive growth, and ensuring
+        sustainability. With initiatives in renewable energy, digital
+        transformation, and robust infrastructure.
+      </p>
+      <div class="donet-parent">
+        <div class="donet-child">
+          <h1>100 tk</h1>
+        </div>
+        <div class="different-donet-child">
+          <h1>200 tk</h1>
+        </div>
+        <div class="donet-child">
+          <h1>500 tk</h1>
+        </div>
+        <div class="donet-child">
+          <h1>1000 tk</h1>
+        </div>
+      </div>
+      <p class="input">
+        <input
+          class="text"
+          type="text"
+          name=""
+          id=""
+          placeholder="others amount (tk)"
+        />
+      </p>
+      <div class="button-div">
+        <button class="button"><a href="">Done Now</a></button>
+      </div>
+    </section>
+    <footer>
+      <section class="subribe-section">
+        <div class="sub-parent">
+          <h1>Subscribe Newsletter</h1>
+          <p>
+            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+            cutting-edge technology, promoting inclusive growth.
+          </p>
+          <div class="email-div">
+            <input
+              class="email"
+              type="email"
+              name=""
+              id=""
+              placeholder="Enter your email"
+            />
+            <button class="sub-button">
+              <a class="sub-text" href="">Subscribe</a>
+            </button>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
