--- a/index.html
+++ b/index.html
@@ -238,23 +238,32 @@
     <footer>
       <section class="subribe-section">
         <div class="sub-parent">
-          <h1>Subscribe Newsletter</h1>
-          <p>
-            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
-            cutting-edge technology, promoting inclusive growth.
-          </p>
-          <div class="email-div">
-            <input
-              class="email"
-              type="email"
-              name=""
-              id=""
-              placeholder="Enter your email"
-            />
-            <button class="sub-button">
-              <a class="sub-text" href="">Subscribe</a>
-            </button>
+          <div class="sub-child">
+            <h1>Subscribe Newsletter</h1>
+            <p>
+              Bangladesh 2.0 aims to redefine the nation’s trajectory by
+              embracing cutting-edge technology, promoting inclusive growth.
+            </p>
+            <label for="Subscribe"
+              ><input
+                class="input-f"
+                type="email"
+                name=""
+                id=""
+                placeholder="enter your email"
+              /><button class="button-f">Subscribe</button></label
+            >
           </div>
+        </div>
+      </section>
+      <section class="footer">
+        <h1>Bangladesh 2.0</h1>
+
+        <hr />
+        <div class="footer-icon">
+          <div><img src="assets/facebook.png" alt="" /></div>
+          <div><img src="assets/instagram.png" alt="" /></div>
+          <div><img src="assets/x.png" alt="" /></div>
         </div>
       </section>
     </footer>
