--- a/index.html
+++ b/index.html
@@ -244,15 +244,16 @@
               Bangladesh 2.0 aims to redefine the nation’s trajectory by
               embracing cutting-edge technology, promoting inclusive growth.
             </p>
-            <label for="Subscribe"
-              ><input
+            <div class="sub-input">
+              <input
                 class="input-f"
                 type="email"
                 name=""
                 id=""
                 placeholder="enter your email"
-              /><button class="button-f">Subscribe</button></label
-            >
+              /><button class="button-f">Subscribe</button>
+            </div>
+            <p style="margin-top: 30px">We promise not to spam you!</p>
           </div>
         </div>
       </section>
