everything-is-okay

--- a/index.html
+++ b/index.html
@@ -52,26 +52,26 @@
           </div>
           <div class="pillars-child">
             <img src="assets/card-icon.png" alt="" />
-            <h3>Innovation</h3>
+            <h3>Sustainability</h3>
             <p>
-              Creating a nationwide digital ecosystem to enhance connectivity
-              and access to services for all citizens.
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
             </p>
           </div>
           <div class="pillars-child">
             <img src="assets/card-icon.png" alt="" />
-            <h3>Innovation</h3>
+            <h3>Infrastructure</h3>
             <p>
-              Creating a nationwide digital ecosystem to enhance connectivity
-              and access to services for all citizens.
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
             </p>
           </div>
           <div class="pillars-child">
             <img src="assets/card-icon.png" alt="" />
-            <h3>Innovation</h3>
+            <h3>Empowerment</h3>
             <p>
-              Creating a nationwide digital ecosystem to enhance connectivity
-              and access to services for all citizens.
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
             </p>
           </div>
         </div>
@@ -119,14 +119,16 @@
     <section class="optional-section">
       <div class="opt-parent">
         <p>
-          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
-          quas, ducimus labore sequi quos deserunt optio id repellendus tempora
-          veniam amet porro corporis exercitationem numquam debitis culpa
-          laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus
-          fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab
-          aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum
-          eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam
-          architecto soluta necessitatibus vero?"
+          Web development is your gateway to creativity, problem-solving, and
+          innovation! Every expert once started as a beginner, so keep learning,
+          keep coding. With HTML, CSS, and JavaScript, you can build amazing
+          websites and applications that impact the world. The tech industry is
+          booming, offering endless career opportunities, freelancing options,
+          and remote work. Don’t fear challenges—every bug you fix makes you
+          stronger! Start small, stay consistent, and celebrate progress. Your
+          skills will grow, and soon, you'll be creating projects you once
+          thought were impossible. Believe in yourself, and never stop building!
+          The world needs your creativity!
         </p>
         <h2>Shakib Al Hasan</h2>
         <p>Student of web-development batch 11</p>
@@ -134,8 +136,61 @@
     </section>
 
     <section class="openion-section">
-      '
       <h1>Your Opinion Matters</h1>
+      <div class="openion-parent">
+        <form action="">
+          <table>
+            <thead>
+              <tr class="tr-th">
+                <th style="text-align: start">Questions</th>
+                <th>Select Your Opinion</th>
+              </tr>
+            </thead>
+            <tbody class="tbody">
+              <tr>
+                <td>
+                  Do you believe Bangladesh is on the right path toward becoming
+                  a developed nation?
+                </td>
+                <td>
+                  <select class="select" name="" id="">
+                    <option value="Yes, I Agree">Yes, I Agree</option>
+                    <option value="Yes, I Agree">Not interested</option>
+                    <option value="Yes, I Agree">thinking</option>
+                  </select>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Do you believe Bangladesh is on the right path toward becoming
+                  a developed nation?
+                </td>
+                <td>
+                  <select class="select" name="" id="">
+                    <option value="Yes, I Agree">Yes, I Agree</option>
+                    <option value="Yes, I Agree">Not interested</option>
+                    <option value="Yes, I Agree">thinking</option>
+                  </select>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  Do you believe Bangladesh is on the right path toward becoming
+                  a developed nation?
+                </td>
+                <td>
+                  <select class="select" name="" id="">
+                    <option value="Yes, I Agree">Yes, I Agree</option>
+                    <option value="Yes, I Agree">Not interested</option>
+                    <option value="Yes, I Agree">thinking</option>
+                  </select>
+                </td>
+              </tr>
+            </tbody>
+            <tfoot></tfoot>
+          </table>
+        </form>
+      </div>
     </section>
 
     <section class="recent-news-section">
